--- a/01-docker-terraform/2_docker_sql/docker-compose.yaml
+++ b/01-docker-terraform/2_docker_sql/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - "./ny_taxi_postgres_data:/var/lib/postgresql/data:rw"
     ports:
       - "5432:5432"
+  
   pgadmin:
     image: dpage/pgadmin4
     environment:
@@ -16,4 +17,5 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=root
     ports:
       - "8080:80"
-    
+    volumes:
+      - "./pgadmin_data:/var/lib/pgadmin"
