--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,8 @@
 **.env
 **__pycache__/
 .history
-**/ny_taxi_postgres_data/*
+**/*_data/*
 serving_dir
 .ipynb_checkpoints/
 !week_6_stream_processing/avro_example/data/rides.csv
 tfplan*
-
